<resources>
    <string name="app_name">MAGE</string>
    <string name="aboutText">MAGE provides mobile situational awareness capabilities. The MAGE app on your mobile device allows you to create geotagged field reports that contain media such as photos, videos, and voice recordings and share them instantly with who you want. Using the GPS in your mobile device, MAGE can also track users locations in real time. Your locations can be automatically shared with the other members of your team.\n\nThe app remains functional if your mobile device loses its network connection, and will upload its local content when a connection is re-established. When disconnected from the network, MAGE will use local data layers to continue to provide relevant GEOINT. Data layers, including map tiles and vector data, can be stored on your mobile device and are available at all times.</string>
    <string name="map_settings">Map Settings</string>
    <string name="location_settings">Location Services</string>
    <string name="fetch_settings">Data Fetching</string>
    <string name="observation_view">Observation</string>
    <string name="title_people">People</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="favorited_by">Favorited by</string>
    <string name="title_mapViewDefault">Set Default Map View</string>
    <string name="disclaimerText" />
    <string name="remove_attachment_title">Remove Attachment</string>
    <string name="remove_attachment_confirm">Remove</string>
    <string name="remove_attachment_dialog_message">Do you want to remove this attachment from the observation?</string>
    <string name="device_registered_text">Your device has been registered.  \nAn administrator has been notified to approve this device.</string>
    <string name="cancel_edit">Do you want to discard your changes?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="discard_changes">Yes, Discard</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="force_submit"><u>Force Submit</u></string>
    <string name="account_active_message">Your account has been created.</string>
    <string name="account_inactive_title">Account Created</string>
    <string name="account_inactive_message">Your account has been created but it is not active.  Please contact your MAGE administrator to activate your account before you can log in.</string>
    <string name="account_disabled_title">Account Disabled</string>
    <string name="account_disabled_message">Your account has been disabled, please contact your MAGE administrator for assistance.</string>
    <string name="account_unknown_title">Account Problem</string>
    <string name="account_unknown_message">Sorry, there looks to be an unknown issue with your account, please contact your MAGE administrator for assistance.</string>
    <string name="advanced_time_filter_options">Advanced Time Filter Options</string>
    <string name="observation_filter">Observations</string>
    <string name="observation_users_filter">User Filter</string>
    <string name="locations_filter">Locations</string>
    <string name="favorites">Favorites</string>
    <string name="show_favorite_observations">Show my favorite observations.</string>
    <string name="important">Important</string>
    <string name="show_important_observations">Show observations flagged as important.</string>
    <string name="time_filter">TIME FILTER</string>
    <string name="time_filter_observations">TIME FILTER (Observations Only)</string>
    <string name="user_filter">USER FILTER</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="twenty_four_hours">24 Hours</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="custom">Custom</string>
    <string name="user_filter_desc">Filtered by Users</string>
    <string name="user_filter_preview_prefix">Filtering: %s</string>
    <string name="all_observation_description">Do not filter observations on time.</string>
    <string name="today_observation_description">Show today\'s observations.</string>
    <string name="twenty_four_hours_observation_description">Show observations for last 24 hours.</string>
    <string name="last_week_observation_description">Show observations for last week.</string>
    <string name="last_month_observation_description">Show observations for last month.</string>
    <string name="custom_observation_description">Define a custom rolling window.</string>
    <string name="all_location_description">Do not filter locations on time.</string>
    <string name="today_location_description">Show today\'s locations.</string>
    <string name="twenty_four_hours_location_description">Show locations for last 24 hours.</string>
    <string name="last_week_location_description">Show locations for last week.</string>
    <string name="last_month_location_description">Show locations for last month.</string>
    <string name="custom_location_description">Define a custom rolling window.</string>
    <string name="reauthentication_message"><b>You</b> were logged in as &lt;b>%s&lt;/b>, and your MAGE session has expired. Please login to resume using MAGE.</string>
    <string name="navigation_choice_title"><font color='#DD000000'>How would you like to navigate?</font></string>
    <string name="navigation_choice_message" />
    <string name="navigation_choice_bearing">Bearing</string>
    <string name="navigation_choice_android">Maps Application</string>
    <string name="location_services_enabled_summary">Click to configure GPS sensitive and tracking options</string>
    <string name="location_services_disabled_summary">MAGE location services have been disabled. Click here to go to settings and enabled the location permission</string>
    <string name="no_event_title">Event membership required</string>
    <string name="observation_no_event_message">You are not a member of the current event.  You cannot create observations in this event.</string>
    <string name="observation_no_event_edit_message">You are not a member of the current event.  You cannot edit this observation.</string>
    <string name="location_no_event_message">You are not a member of the current event.  You cannot report your location in this event.</string>
    <string name="location_missing_title">No Location Available</string>
    <string name="location_missing_message">The device has not received a location yet.  To make an observation manually, long press on the map.</string>
    <string name="location_precise_denied_access_title">Precise Location Disabled</string>
    <string name="location_precise_denied_access_message">You are currently using coarse location which limits your location accuracy to several kilometers. Would you like to allow MAGE to access your precise location?</string>
    <string name="location_precise_denied_settings_message">You are currently using coarse location which limits your location accuracy to several kilometers. Would you like to allow MAGE to access your precise location? This can be toggled in settings.</string>
    <string name="location_precise_denied_access_enable">Precise Location Disabled</string>
    <string name="location_stop_coarse_reporting">Stop reporting location</string>
    <string name="location_start_coarse_reporting">Report coarse location</string>
    <string name="location_enable_precise">Enable precise location</string>
    <string name="location_keep_coarse">Use coarse location</string>
    <string name="location_enable_settings">Enable in settings</string>
    <string name="location_access_denied_title">Location Services Disabled</string>
    <string name="location_access_observation_message">MAGE does not have access to your device location.  To create observations at your current location, go to your device settings and enable the Location permission.  You can also long press on the map at the desired location.</string>
    <string name="location_access_report_message">MAGE does not have access to your device location.  To enable location reporting, go to your device settings and enable the Location permission.</string>
    <string name="location_device_access_disabled_message">MAGE does not have access to your device location.  To enable location reporting, first go to your device settings and enable Location tracking.</string>
    <string name="location_access_zoom_message">MAGE does not have access to your device location.  To zoom to your location, go to your device settings and enable the Location permission.</string>
    <string name="location_access_directions_message">MAGE does not have access to your device location.  To get directions from your location, go to your device settings and enable the Location permission.</string>
    <string name="always_show_heading_title">Display Your Heading</string>
    <string name="always_show_heading_message">Would you like to display your heading on the map? This can be toggled in settings.</string>
    <string name="cache_access_rationale_title">Use MAGE Offline Maps</string>
    <string name="cache_access_rationale_message">MAGE is looking for offline maps that may reside in external storage on your device. Please allow MAGE to access external media to view this map.</string>
    <string name="cache_access_title">Storage Permission Denied</string>
    <string name="cache_access_message">MAGE has been denied access to external storage.  To access map caches that reside in external storage please go into the MAGE application settings on your device and enable the Storage permission.</string>
    <string name="camera_access_title">Camera or Storage Permission Denied</string>
    <string name="camera_access_message">MAGE has been denied access to the camera. To use the camera please go into the MAGE application settings on your device and enable the Camera and Storage permissions.</string>
    <string name="audio_access_title">Microphone or Storage Permission Denied</string>
    <string name="audio_access_message">MAGE has been denied access to the microphone. To create audio files please go into the MAGE application settings on your device and enable the Microphone permission.</string>
    <string name="location_access_title">Location Permission Denied</string>
    <string name="location_access_message">MAGE has been denied access to your location. Please go into the MAGE application settings on your device and enable the Location permission.</string>
    <string name="notifications_denied_title">Notifications Permission Denied</string>
    <string name="notifications_denied_message">MAGE has been denied the notifications permission. If you would like to enable this please go to the MAGE application settings on your device and enable notifications.</string>
    <string name="important_flagged_by">%s flagged as important.</string>
    <string name="settings">Settings</string>
    <string name="disconnected_mode">DISCONNECTED</string>
    <string name="connected_mode">CONNECTED</string>
    <string name="overlay_map_refresh_enabled">Refresh</string>
    <string name="offline_layers_no_content_title_text">No offline layers</string>
    <string name="change_password">Change Password</string>
    <string name="update_your_mage_password">Update your MAGE password.</string>
    <string name="logout">Logout</string>
    <string name="stop_contributing_to_mage">Stop contributing to MAGE.</string>
    <string name="change_event">Change Event</string>
    <string name="Feeds">Feeds</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
</resources>