<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_one"
        android:checkableBehavior="single">

        <item
            android:id="@+id/event_navigation"
            android:icon="@drawable/ic_event_available_white_24dp"
            android:title=""
            app:showAsAction="always" />

    </group>

    <item android:id="@+id/recents_events_item"
        android:title="@string/change_event">
        <menu>
            <group android:id="@+id/events_group"/>
        </menu>
    </item>

    <item android:id="@+id/feeds_item"
        android:title="@string/Feeds">
        <menu>
            <group android:id="@+id/feeds_group"/>
        </menu>
    </item>

    <group android:id="@+id/group_three">

        <item
            android:id="@+id/profile_navigation"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/Profile" />

        <item
            android:id="@+id/settings_navigation"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/Settings" />

        <item
            android:id="@+id/help_navigation"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/About" />

        <item
            android:id="@+id/logout_navigation"
            android:icon="@drawable/ic_power_settings_new_white_24dp"
            android:title="@string/Logout" />
    </group>

</menu>