<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="end">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dip"
                android:gravity="center_vertical"
                android:layout_marginTop="3dip"
                android:text="@string/time_filter"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:id="@+id/none_time_filter"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/none_radio"
                    android:tag="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        style="@style/ListTextPrimary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_location_description"
                        style="@style/ListTextSecondary"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/today_time_filter"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/since_midnight_radio"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        style="@style/ListTextPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_location_description"
                        style="@style/ListTextSecondary" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/last_24_hours_time_filter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/last_24_hours_radio"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twenty_four_hours"
                        style="@style/ListTextPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twenty_four_hours_location_description"
                        style="@style/ListTextSecondary" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/last_week_time_filter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/last_week_radio"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_week"
                        style="@style/ListTextPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_week_location_description"
                        style="@style/ListTextSecondary" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/last_month_time_filter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/last_month_radio"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_month"
                        style="@style/ListTextPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_month_location_description"
                        style="@style/ListTextSecondary" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/custom_time_filter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <RadioButton
                    android:id="@+id/custom_radio"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom"
                        style="@style/ListTextPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_observation_description"
                        style="@style/ListTextSecondary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/custom_window_view">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:visibility="invisible"
                    android:clickable="false"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ListTextPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="Last"/>

                    <EditText
                        android:id="@+id/custom_input_time_number"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="X"
                        android:inputType="number"
                        android:maxLines="1"
                        style="@style/ListTextPrimary" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/custom_input_time_unit"
                        style="@style/ListTextPrimary"
                        android:entries="@array/timeUnitEntries"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>