<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_dialog"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginEnd="3dip"
            android:layout_gravity="center_vertical"
            android:alpha=".87"
            android:src="@drawable/ic_vpn_key_white_24dp"
            app:tint="@color/md_amber_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                style="@style/ListTextPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_your_mage_password"
                style="@style/ListTextSecondary"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:paddingBottom="16dp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginEnd="3dip"
            android:alpha=".87"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_power_settings_new_white_24dp"
            app:tint="@color/md_red_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                style="@style/ListTextPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_contributing_to_mage"
                style="@style/ListTextSecondary"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
